--- a/MobileNet-Xinming.ipynb
+++ b/MobileNet-Xinming.ipynb
@@ -10,14 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "870c934a",
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils.model import Basic_CNN, mobilenet\n",
     "import tensorflow as tf\n",
-    "from keras.optimizers import Adam, SGD"
+    "from keras.optimizers import Adam, SGD\n",
+    "from keras.optimizers import SGD, RMSprop, Adam, Nadam\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Flatten, Conv2D, DepthwiseConv2D, AveragePooling2D, Activation\n",
+    "from keras.layers import BatchNormalization, Dropout\n",
+    "from keras import backend\n"
    ]
   },
   {
@@ -48,7 +53,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
+   "id": "13b36a13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class mobilenet:\n",
+    "    def __init__(self, input_dim, num_classes):\n",
+    "        self.input_dim = input_dim\n",
+    "        self.num_classes = num_classes\n",
+    "        self.model = None\n",
+    "        \n",
+    "    def create_empty_model(self):\n",
+    "        model = Sequential()\n",
+    "        self.model = model\n",
+    "    \n",
+    "    def add_layer(self,use_batch = True, use_drop = True):\n",
+    "        self.model.add(Conv2D(32, (3,3),strides=2))\n",
+    "        self.model.add(DepthwiseConv2D((3,3), strides=1))\n",
+    "        \n",
+    "        self.model.add(Conv2D(64, (1,1),strides=1))\n",
+    "\n",
+    "        \n",
+    "        self.model.add(AveragePooling2D((7,7)))\n",
+    "        self.model.add(Flatten())\n",
+    "        self.model.add(Dense(self.num_classes, activation=\"softmax\"))\n",
+    "        \n",
+    "    def train(self,x_train,y_train,optimizer,loss='sparse_categorical_crossentropy',val_split = 0.2,\n",
+    "             epochs = 2, batch_size = 256):\n",
+    "        \n",
+    "        self.model.compile(optimizer=optimizer,loss=loss,metrics=['accuracy'])\n",
+    "        self.model.fit(x=x_train, \n",
+    "                       y=y_train,\n",
+    "                       validation_split = val_split,\n",
+    "                       batch_size=batch_size,\n",
+    "                       epochs=epochs)\n",
+    "        \n",
+    "    def summary(self):\n",
+    "        return self.model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "e5379b19",
    "metadata": {},
    "outputs": [
@@ -56,35 +103,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "188/188 [==============================] - 4s 17ms/step - loss: 2.0372 - accuracy: 0.2461 - val_loss: 1.7243 - val_accuracy: 0.4094\n",
-      "Epoch 2/10\n",
-      "188/188 [==============================] - 3s 14ms/step - loss: 1.5220 - accuracy: 0.4618 - val_loss: 1.3539 - val_accuracy: 0.5293\n",
-      "Epoch 3/10\n",
-      "188/188 [==============================] - 3s 15ms/step - loss: 1.2575 - accuracy: 0.5530 - val_loss: 1.1661 - val_accuracy: 0.5978\n",
-      "Epoch 4/10\n",
-      "188/188 [==============================] - 3s 14ms/step - loss: 1.1246 - accuracy: 0.6005 - val_loss: 1.0791 - val_accuracy: 0.6220\n",
-      "Epoch 5/10\n",
-      "188/188 [==============================] - 3s 14ms/step - loss: 1.0676 - accuracy: 0.6173 - val_loss: 1.0412 - val_accuracy: 0.6288\n",
-      "Epoch 6/10\n",
-      "188/188 [==============================] - 3s 13ms/step - loss: 1.0426 - accuracy: 0.6239 - val_loss: 1.0289 - val_accuracy: 0.6292\n",
-      "Epoch 7/10\n",
-      "188/188 [==============================] - 3s 14ms/step - loss: 1.0305 - accuracy: 0.6270 - val_loss: 1.0148 - val_accuracy: 0.6346\n",
-      "Epoch 8/10\n",
-      "188/188 [==============================] - 3s 14ms/step - loss: 1.0228 - accuracy: 0.6283 - val_loss: 1.0081 - val_accuracy: 0.6339\n",
-      "Epoch 9/10\n",
-      "188/188 [==============================] - 3s 14ms/step - loss: 1.0170 - accuracy: 0.6294 - val_loss: 1.0062 - val_accuracy: 0.6276\n",
-      "Epoch 10/10\n",
-      "188/188 [==============================] - 3s 13ms/step - loss: 1.0120 - accuracy: 0.6301 - val_loss: 0.9964 - val_accuracy: 0.6369\n"
+      "Epoch 1/2\n",
+      "188/188 [==============================] - 6s 26ms/step - loss: 1.8180 - accuracy: 0.3207 - val_loss: 1.3195 - val_accuracy: 0.5156\n",
+      "Epoch 2/2\n",
+      "188/188 [==============================] - 4s 23ms/step - loss: 1.1389 - accuracy: 0.5885 - val_loss: 1.0414 - val_accuracy: 0.6237\n"
      ]
     }
    ],
    "source": [
-    "CNN_model = Basic_CNN((28,28,1),10)\n",
+    "CNN_model = mobilenet((28,28,1),10)\n",
     "CNN_model.create_empty_model()\n",
     "CNN_model.add_layer()\n",
-    "CNN_model.train(x_train=x_train,y_train=y_train,optimizer=Adam(0.001),epochs=10)"
+    "CNN_model.train(x_train=x_train,y_train=y_train,optimizer=Adam(0.001),epochs=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6979bf1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
