--- a/MobileNet-Xinming.ipynb
+++ b/MobileNet-Xinming.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf38b89b",
+   "id": "830e247a",
    "metadata": {},
    "source": [
     "### III. $\\alpha = 0.5$ "
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e4f09c96",
+   "id": "b7192b10",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4eeb4857",
+   "id": "f5d45ce5",
    "metadata": {},
    "outputs": [
     {
@@ -300,6 +300,43 @@
     "plt.plot(history.history[\"val_accuracy\"], label = \"validation\")\n",
     "plt.gca().set(xlabel = \"epoch\", ylabel = \"accuracy\")\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7012f9c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "1500/1500 [==============================] - 181s 118ms/step - loss: 2.3818 - accuracy: 0.1087 - val_loss: 469.8445 - val_accuracy: 0.0983\n",
+      "Epoch 2/10\n",
+      "1500/1500 [==============================] - 179s 119ms/step - loss: 2.3286 - accuracy: 0.1094 - val_loss: 934.5204 - val_accuracy: 0.0983\n",
+      "Epoch 3/10\n",
+      "1500/1500 [==============================] - 171s 114ms/step - loss: 2.2995 - accuracy: 0.1124 - val_loss: 9960.4756 - val_accuracy: 0.0983\n",
+      "Epoch 4/10\n",
+      "1500/1500 [==============================] - 172s 115ms/step - loss: 2.3146 - accuracy: 0.1117 - val_loss: 1797.4169 - val_accuracy: 0.0957\n",
+      "Epoch 5/10\n",
+      "1500/1500 [==============================] - 176s 117ms/step - loss: 2.3010 - accuracy: 0.1117 - val_loss: 7476.9253 - val_accuracy: 0.0983\n",
+      "Epoch 6/10\n",
+      "1500/1500 [==============================] - 175s 116ms/step - loss: 2.2868 - accuracy: 0.1102 - val_loss: 3237.9260 - val_accuracy: 0.0983\n",
+      "Epoch 7/10\n",
+      "1500/1500 [==============================] - 175s 117ms/step - loss: 2.3076 - accuracy: 0.1110 - val_loss: 5648.5352 - val_accuracy: 0.0983\n",
+      "Epoch 8/10\n",
+      " 647/1500 [===========>..................] - ETA: 1:37 - loss: 2.2867 - accuracy: 0.1113"
+     ]
+    }
+   ],
+   "source": [
+    "model = mobilenet(x_train.shape[1:],10, alpha = 0.5)\n",
+    "model.compile(optimizer = RMSprop(learning_rate = 0.001, rho = 0.9), loss = 'sparse_categorical_crossentropy', metrics = ['accuracy'])\n",
+    "history = model.fit(x_train,y_train, validation_split=0.2, \n",
+    "                    epochs=10, \n",
+    "                    verbose = 1)"
    ]
   },
   {
