--- a/MobileNet-Xinming.ipynb
+++ b/MobileNet-Xinming.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "830e247a",
+   "id": "7fa8140d",
    "metadata": {},
    "source": [
     "### III. $\\alpha = 0.5$ "
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b7192b10",
+   "id": "fbbaa027",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f5d45ce5",
+   "id": "8c5b3744",
    "metadata": {},
    "outputs": [
     {
@@ -304,8 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7012f9c2",
+   "execution_count": 11,
+   "id": "045de963",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,11 @@
       "Epoch 7/10\n",
       "1500/1500 [==============================] - 175s 117ms/step - loss: 2.3076 - accuracy: 0.1110 - val_loss: 5648.5352 - val_accuracy: 0.0983\n",
       "Epoch 8/10\n",
-      " 647/1500 [===========>..................] - ETA: 1:37 - loss: 2.2867 - accuracy: 0.1113"
+      "1500/1500 [==============================] - 175s 117ms/step - loss: 2.2942 - accuracy: 0.1118 - val_loss: 2834.6370 - val_accuracy: 0.0983\n",
+      "Epoch 9/10\n",
+      "1500/1500 [==============================] - 175s 117ms/step - loss: 2.2942 - accuracy: 0.1130 - val_loss: 1662.6986 - val_accuracy: 0.1032\n",
+      "Epoch 10/10\n",
+      "1500/1500 [==============================] - 179s 119ms/step - loss: 2.2868 - accuracy: 0.1115 - val_loss: 1514.1337 - val_accuracy: 0.1028\n"
      ]
     }
    ],
